# favicon-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  docker-run.sh  run.sh
src/: main.rs
static/: index.html  robots.txt
