[package]
name = "favicon-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
hyper = { version = "0.14", features = ["full"] }
rustc_version_runtime = "0.3.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
