[package]
name = "favicon-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.7.5", features = ["multipart"] }
base64 = "0.22.1"
cairo-rs = { version = "0.20.0", features = ["svg", "png", "pdf", "freetype-rs"] }
chrono = "0.4.38"
futures = "0.3.30"
hyper = { version = "0.14", features = ["full"] }
ico = "0.3.0"
librsvg-rebind = "0.1.0"
rustc_version_runtime = "0.3.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "limit"] }
